resources/app-sre-stage/unleash-stage/unleash.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
  labels:
    service: app-interface
  name: unleash-stage
spec:
  host: app-interface.unleash.stage.devshift.net
  to:
    kind: Service
    name: app-interface
    weight: 100
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
